---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    - Added some warning messages when trying to open items/recipes in FNEI/WIIRUF/RB fails
  Bugfixes:
    - Fixed some minor graphical issues with the new import/export dialogs

---------------------------------------------------------------------------------------------------
Version: 0.18.44
Date: 27. 07. 2020
  Features:
    - This update (finally) brings with it the ability to import/export your subfactories! It works similarly to exporting blueprints, which means that it gives you a 'factory exchange string' that you can share with others or use yourself to import your plans in a different save.

---------------------------------------------------------------------------------------------------
Version: 0.18.43
Date: 26. 07. 2020
  Bugfixes:
    - Implement potential fix for a crash when duplicating certain subfactories
    - Fixed that moving list items to the bottom/top did not work correctly

---------------------------------------------------------------------------------------------------
Version: 0.18.42
Date: 21. 07. 2020
  Features:
    - [Warning: Experimental! This update contains some more data backend changes. They should not cause any issues though, as they are pretty minimal and un-invasive]
    - Added a button to exactly duplicate existing subfactories. This comes as a nice side-benefit of implementing import/export of subfactories, and as it is ready, I decided to release it now.
  Bugfixes:
    - Fixed some problems with migration

---------------------------------------------------------------------------------------------------
Version: 0.18.41
Date: 20. 07. 2020
  Bugfixes:
    - Fixed an issue where fuels were not being migrated correctly

---------------------------------------------------------------------------------------------------
Version: 0.18.40
Date: 20. 07. 2020