@@ -223,7 +223,7 @@ function ui_util.format_SI_value(value, unit, precision)
     local units = {
         ["W"] = {"fp.unit_watt"},
         ["J"] = {"fp.unit_joule"},
-        ["P/s"] = {"", {"fp.unit_pollution"}, "/", {"fp.unit_second"}}
+        ["P/m"] = {"", {"fp.unit_pollution"}, "/", {"fp.unit_minute"}}
     }
 
     local sign = (value >= 0) and "" or "-"
@@ -424,7 +424,7 @@ function ui_util.attributes.machine(machine)
     local energy_usage = machine.energy_usage * 60
     return {"", {"fp.crafting_speed"}, ": " .. ui_util.format_number(machine.speed, 4) .. "\n",
            {"fp.energy_consumption"}, ": ", ui_util.format_SI_value(energy_usage, "W", 3), "\n",
-           {"fp.cpollution"}, ": ", ui_util.format_SI_value(energy_usage * machine.emissions, "P/s", 3), "\n",
+           {"fp.cpollution"}, ": ", ui_util.format_SI_value(energy_usage * machine.emissions * 60, "P/m", 3), "\n",
            {"fp.module_slots"}, ": " .. machine.module_limit}
 end
 
